maj program and selected presentations

--- a/DSB2024/DSB2024.md
+++ b/DSB2024/DSB2024.md
@@ -23,38 +23,47 @@ The workshop  will take place in the Amphitheatre of Building #2 of the Campus (
   The nearest Tram station is "Chateau d'O", located at the roundabout of the same name.
   ![Local map](./stpriest_map_bat2.png) 
 
-## How to participate
-
-Registration for participating to DSB 2024 is free! 
-
-Registrations and submissions are now open at: [https://dsb-2024.sciencesconf.org/](https://dsb-2024.sciencesconf.org/ "dsb registration site")
-
-Deadline for registration: February 20th, 2024.
-
-## Abstract submission
-
-You can submit an abstract (max 300 words) via the Sciencesconf system at
- [https://dsb-2024.sciencesconf.org/](https://dsb-2024.sciencesconf.org/ "dsb submission site")
-
-
-To do so, you will be required to register by creating an account with your professional email.
-
- **Abstract submission deadline (postponed): February ~~1st~~ 10th, 2024**.
-
-As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
-
 ## Program
 
-TBA
+The detailed program is available as pdf file: [DSB program](./dsb_2024_detailed_prog.pdf "DSB 2024 program")
 
-The list of abstracts selected for publication will be announced on February 15th 2024 at the latest.
+The list of selected abstracts is below:
+| Speaker               | Title                                                                                                             |
+|-----------------------+-------------------------------------------------------------------------------------------------------------------|
+| Avila Jorge           | A compact embedding-based indexing for accurate and rapid classification in bacterial pangenomics                 |
+| Rivals Eric           | An incremental algorithm for computing the set of all period sets                                                 |
+| Renders Luca          | Automated design of efficient search schemes for lossless approximate pattern matching                            |
+| Smith Caleb           | Brisk: Exact resource-efficient dictionary for k-mers                                                             |
+| Martayan Igor         | Conway-Bromage-Lyndon (CBL): an exact, dynamic representation of k-mer sets                                       |
+| Wirtz Johannes        | Counting multiple-merger tree structures emerging in Population Genetics                                          |
+| Schmitz Johanna       | EpiSegMix: Discovering chromatin states using a flexible distribution hidden Markov model with duration modeling  |
+| Rizzo Nicola          | Exploiting uniqueness: seed-chain-extend alignment with Elastic Founder Graphs                                    |
+| Biagi Elena           | Finimizers: Variable-length bounded-frequency minimizers for k-mer sets                                           |
+| Uzuner Hamdiye        | Generalized uncertainty-aware haplotype quantification with application in HLA typing and virus analysis.         |
+| Luca Parmigiani       | Interpolating and Extrapolating Node Counts in Colored Compacted de Bruijn Graphs for Pangenome Growth Comparison |
+| Hendrychová Veronika  | Mathematical model of phylogenetic compression                                                                    |
+| Romashchenko Nikolai  | Memory-frugal disk-based (phylo-)k-mer filtering for alignment-free phylogenetic placement                        |
+| Draesslerová Dominika | Metagenomic classification with maximal exact matches in KATKA kernels and minimizer digests                      |
+| Rouzé Timothé         | Pangenomic k-mer distribution with low memory cost                                                                |
+| Sgro Mattia           | PlasBin-flow on Pangenome graphs: improving bacterial plasmid binning in short-read assemblies                    |
+| Depuydt Lore          | r-indexing without backward searching                                                                             |
+| Bonnet Konstantinn    | Strangepg: Toward Pangenome Scale Graph Visualization                                                             |
+| Levallois Victor      | The Backpack Quotient Filter: a dynamic and space-efficient data structure for querying k-mers with abundance.    |
+| Vandamme Lea          | Tinted de Bruijn Graphs for efficient read extraction from sequencing datasets                                    |
+| Dubois Siegfried      | Towards an edit distance between pangenome graphs                                                                 |
+| Chikhi Rayan          | Work in progress for peta-scale sequence exploration                                                              |
+
 
 ## Organizers
-
+From team "Methods & Algorithms for Bioinformatics":
 - Jordan Moutet (LIRMM - CNRS et Univ. Montpellier)
 - [Eric Rivals](https://www.lirmm.fr/~rivals/)  (LIRMM - CNRS et Univ. Montpellier)
 - Nikolai Romashchenko (LIRMM - CNRS et Univ. Montpellier)
 - Pengfei Wang (LIRMM - CNRS et Univ. Montpellier)
+
+and the LIRMM Communication unit
+- Virginie Fêche 
+- Elena Demchenko
 
 For any questions about DSB2024, please reach out to [rivals@lirmm.fr](mailto:rivals@lirmm.fr).
 
@@ -67,6 +76,24 @@ Lots of thanks for the financial support of:
 
   ![ALPACA logo](./alpaca-logo-m.png)      ![GDR BIM logo](./gdrbim-logo.png)
 
+## How to participate
+
+Registration for participating to DSB 2024 is free and now closed.
+
+Registrations and submissions are now open at: [https://dsb-2024.sciencesconf.org/](https://dsb-2024.sciencesconf.org/ "dsb registration site")
+
+Deadline for registration: February 20th, 2024.
+
+## Abstract submission
+
+You can submit an abstract (max 300 words) via the Sciencesconf system at
+ [https://dsb-2024.sciencesconf.org/](https://dsb-2024.sciencesconf.org/ "dsb submission site")
+
+To do so, you will be required to register by creating an account with your professional email.
+
+ **Abstract submission deadline (postponed): February ~~1st~~ 10th, 2024**.
+
+As previously, there is no formal review. We intend to give everyone the opportunity to present but the organizers reserve the right to select talks from the submissions to obtain a diverse and interesting program.
 
 ## Information about Montpellier
 
