Fix deadlines and infos for DSB 2025

--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -29,9 +29,9 @@ DSB 2025 will take place at the [Department of Computer Science](https://di.unip
 
 You can submit an abstract (max 300 words) and register at [dsb-2025.sciencesconf.org](https://dsb-2025.sciencesconf.org/).
 
-**Abstract submission deadline:** February 10th, 2025 AoE.
+**Abstract submission deadline:** February 1st, 2025 AoE.
 
-**Deadline for registration:** February 20th, 2025 AoE.
+**Deadline for registration:** February 15th, 2025 AoE.
 
 As in previous editions, there will be no formal review process. While we aim to provide everyone with an opportunity to present, the organizers reserve the right to select talks from the submissions to ensure a diverse and engaging program.
 
@@ -58,7 +58,7 @@ Lots of thanks for the financial support of:
 
 ## Information about Pisa
 
-**Travel.** Pisa is conveniently served by [Galileo Galilei International Airport](https://www.pisa-airport.com/en/). From the airport, you can easily reach the city center by the [Pisamover Shuttle](https://pisa-mover.com/en/shuttle-service/) or a [taxi](https://www.pisa-airport.com/en/the-passengers/transport/taxi.html).
+**Travel.** Pisa is conveniently served by [Galileo Galilei International Airport](https://www.pisa-airport.com/en/).
 For additional travel options, the nearest alternative airport is Florence’s [Amerigo Vespucci Airport](https://www.aeroporto.firenze.it/en/). From there, you can take tram line T2 to the main train station, Firenze Santa Maria Novella. From this station, regular [regional trains](https://www.trenitalia.com/en.html) run directly to Pisa, with a travel time of about one hour.
 
 **Getting Around Pisa.** Pisa is a compact and pedestrian-friendly city, with most attractions and key locations within easy walking distance. Buses are also readily available: you can easily find directions using Google Maps and buy tickets on board using [contactless payment options](https://www.at-bus.it/en/tiptap).
