DSB 2025 sponsors, organization committee, registration link

--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -27,11 +27,11 @@ DSB 2025 will take place at the [Department of Computer Science](https://di.unip
 
 ## How to participate
 
-You can submit an abstract (max 300 words) and register at [dsb-2025.sciencesconf.org](https://dsb-2025.sciencesconf.org/).
-
 **Abstract submission deadline:** February 1st, 2025 AoE.
+[Submit here](https://dsb-2025.sciencesconf.org/) (max 300 words)
 
-**Deadline for registration:** February 15th, 2025 AoE.
+**Registration deadline:** February 15th, 2025 AoE.
+[Register here](https://forms.office.com/e/3qczYFZTCh)
 
 As in previous editions, there will be no formal review process. While we aim to provide everyone with an opportunity to present, the organizers reserve the right to select talks from the submissions to ensure a diverse and engaging program.
 
@@ -42,8 +42,10 @@ TBA
 ## Organizers
 
 - Nadia Pisanti, University of Pisa
-- ...
 - Giorgio Vinciguerra, University of Pisa
+- Veronica Guerrini, University of Pisa
+- Giovanni Buzzega, University of Pisa
+- Giovanna Rosone, University of Pisa
 
 For any questions about DSB 2025, please reach out to [nadia.pisanti@unipi.it](mailto:nadia.pisanti@unipi.it).
 
@@ -51,10 +53,14 @@ For any questions about DSB 2025, please reach out to [nadia.pisanti@unipi.it](m
 
 Lots of thanks for the financial support of:
 
-1. University of Pisa
-2. ...
+1. [Department of Computer Science, University of Pisa](https://di.unipi.it/en/)
+2. [PINC Pangenome INformatiCs](https://pinc-miur.disco.unimib.it/) 
+3. [ALPACA ALgorithms for PAngenome Computational Analysis](https://alpaca-itn.eu)
+4. [THE Tuscany Health Ecosystem, Spoke 6](https://tuscanyhealthecosystem.it) 
 
-  ![UNIPI logo](./unipi.png){: width="250" }
+![Funded by the European Union](./eu-funded.png){: height="50" }  ![Ministero dell'Università e della Rircerca](./mur.jpg){: height="50" }  ![ItaliaDomani PNRR](./italiadomani.png){: height="50" }  ![University of Pisa](./unipi.png){: height="50" }
+
+![PINC](./pinc.png){: height="50" } ![ALPACA](./alpaca.png){: height="50" }  ![THE](./the.png){: height="50" }
 
 ## Information about Pisa
 
