--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -44,6 +44,7 @@ TBA
 - Nadia Pisanti, University of Pisa
 - Giorgio Vinciguerra, University of Pisa
 - Veronica Guerrini, University of Pisa
+- Njagi Mwaniki, University of Pisa
 - Giovanni Buzzega, University of Pisa
 - Giovanna Rosone, University of Pisa
 
