--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -27,8 +27,7 @@ DSB 2025 will take place at the [Department of Computer Science](https://di.unip
 
 ## How to participate
 
-**Abstract submission deadline:** February 1st, 2025 AoE.
-[Submit here](https://dsb-2025.sciencesconf.org/) (max 300 words)
+**Abstract submission deadline:** February 1st, 2025 AoE. Passed.
 
 **Registration deadline:** February 15th, 2025 AoE.
 [Register here](https://forms.office.com/e/3qczYFZTCh)
