--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -27,12 +27,68 @@ DSB 2025 will take place at the [Department of Computer Science](https://di.unip
 
 ## How to participate
 
-**Abstract submission deadline:** February 1st, 2025 AoE. Passed.
+**Abstract submission deadline:** February 1st, 2025 AoE. Expired.
 
 **Registration deadline:** February 15th, 2025 AoE.
 [Register here](https://forms.office.com/e/3qczYFZTCh)
 
 As in previous editions, there will be no formal review process. While we aim to provide everyone with an opportunity to present, the organizers reserve the right to select talks from the submissions to ensure a diverse and engaging program.
+
+## Confirmed participants
+
+*Updated as of February 11th, 2025*
+
+- Ackermann Léo, Univ. Rennes, Inria, CNRS, IRISA
+- Alfredo Carmona Tabja Gabriel, University of Pisa
+- Ascone Rocco, University of Trieste
+- Becker Ruben, Ca' Foscari University of Venice
+- Bernardini Giulia, University of Milan
+- Biagi Elena, University of Helsinki
+- Bohnenkämper Leonard, Bielefeld University
+- Bohuslavova Dominika, Czech Technical University in Prague
+- Bonizzoni Paola, Università di Milano Bicocca
+- Böttcher Stefan, Paderborn University
+- Brunetti Francesca, Sapienza University of Rome
+- Campanelli Alessio, Ca' Foscari University of Venice
+- Carfagna Lorenzo, University of Pisa
+- Cenzato Davide, Ca' Foscari University of Venice
+- Cioni Lapo, Università degli Studi di Firenze
+- Depuydt Lore, Ghent University - imec
+- Elena Schmitz Johanna, Saarland University
+- Flege Patrick, Wageningen University & Research
+- Gao Younan, University of Milano-Bicocca
+- Gargiulo  Francesco, Università di Pisa
+- Girard Mathilde, University of Lille
+- Groot Koerkamp Ragnar, ETH Zurich
+- Grossi Roberto, Università di Pisa
+- Guerrini Veronica, University of Pisa
+- Ingels Florian, Université de Lille
+- Levallois Victor, Inria Rennes
+- Lipták Zsuzsanna, University of Verona
+- Lucà Simone, University of Verona
+- Manzini Giovanni, University of Pisa
+- Mwaniki Njagi, University of Pisa
+- Parmigiani Luca, Bielefeld University
+- Pibiri Giulio Ermanno, Ca' Foscari University of Venice
+- Pisanti Nadia, University of Pisa
+- Prezza Nicola, Ca' Foscari University of Venice
+- Punzi Giulia, University of Pisa
+- Puttini Daniel, Ca' Foscari University of Venice
+- Regnier Alix, Inria - GenScale
+- Rivals Eric,  LIRMM (CNRS) & Univ. Montpellier
+- Rizzo Nicola, University of Helsinki
+- Robidou Lucas, Bielefeld University, Germany
+- Romana Giuseppe, University of Palermo
+- Rosone Giovanna, University of Pisa - Italy
+- Rouzé Timothé, Institut Pasteur Paris
+- Savino Angelo, Università di Pisa
+- Sena Francisco, University of Helsinki
+- Stoye Jens, Bielefeld University
+- Tosoni Carlo, Ca' Foscari University
+- Venturini Rossano, University of Pisa
+- Vinciguerra Giorgio, University of Pisa
+- Wiegand Felix, Bioinformatics and Computational Oncology (Kösterlab), University Duisburg-Essen
+- Zentgraf Jens, Saarland University
 
 ## Program
 
@@ -70,6 +126,8 @@ For additional travel options, the nearest alternative airport is Florence’s [
 **Getting Around Pisa.** Pisa is a compact and pedestrian-friendly city, with most attractions and key locations within easy walking distance. Buses are also readily available: you can easily find directions using Google Maps and buy tickets on board using [contactless payment options](https://www.at-bus.it/en/tiptap).
 
 **Tourism.** For information on local attractions, historical sites, guided tours, and more, please visit the official tourism website of Pisa: [turismo.pisa.it](https://www.turismo.pisa.it/en/node). You’ll find everything you need to explore the city’s rich history, enjoy its vibrant culture, and discover hidden gems beyond the famous Leaning Tower.
+
+
 
 
 <small>
