--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -92,7 +92,70 @@ As in previous editions, there will be no formal review process. While we aim to
 
 ## Program
 
-TBA
+<style>table { border-spacing: 10px; }</style>
+
+### Wednesday, 5 March			
+
+|               |   |
+|---------------|---|
+| <nobr>8:30 - 8:40  </nobr> | <ins>Registration</ins> |
+| <nobr>8:40 - 8:45  </nobr> | <ins>Opening</ins> |
+| <nobr>             </nobr> | **Session 1: Sampling, sketching and compression** ( Chair: Veronica Guerrini ) |
+| <nobr>8:45 - 9:10  </nobr> | A new sketching method for accurate long reads: a genome assembly example |
+| <nobr>9:10 - 9:35  </nobr> | Practical and optimal sampling schemes |
+| <nobr>9:35 - 10:00 </nobr> | Run-length compressed metagenomic read classification with SMEM-finding and tagging |
+| <nobr>10:00 - 10:25</nobr> | Towards space-efficient data structures for large genome-distance matrices with quick retrieval |
+| <nobr>10:25 - 10:55</nobr> | <ins>Break</ins> |
+| <nobr>             </nobr> | **Session 2: Compression Techniques** ( Chair: Ruben Becker ) |
+| <nobr>10:55 - 11:20</nobr> | Compression of Binary k-mer Matrices |
+| <nobr>11:20 - 11:45</nobr> | Where the patterns are: repetition-aware compression for colored the Bruijn graphs |
+| <nobr>11:45 - 12:10</nobr> | OReO: Optimizing Read Order for practical compression |
+| <nobr>12:10 - 12:35</nobr> | Extending grammar-based graph compression by negative hyperedges |
+| <nobr>12:35 - 14:00</nobr> | <ins>Lunch</ins> |
+| <nobr>             </nobr> | **Session 3: Pangenomes graphs** ( Chair: Lore Depuydt )  |
+| <nobr>14:00 - 14:25</nobr> | Panacus: fast statistics for pangenome graphs |
+| <nobr>14:25 - 14:50</nobr> | CARP - A General Framework for Quantifying the Structural Complexity of Pangenomes |
+| <nobr>14:50 - 15:15</nobr> | Efficient indexes for pangenomic graphs through BWT-based data structures |
+| <nobr>15:15 - 15:35</nobr> | <ins>Break</ins> |
+| <nobr>             </nobr> | **Session 4: Degenerate Strings** ( Chair: Lucas Robidou )  |
+| <nobr>15:35 - 16:00</nobr> | Degeneratigs: minimal representation of k-mers as degenerate strings is NP-hard |
+| <nobr>16:00 - 16:25</nobr> | The Burrows-Wheeler transform of an elastic-degenerate string |
+| <nobr>16:25 - 16:45</nobr> | <ins>Break</ins> |
+| <nobr>             </nobr> | **Session 5: Graphs** ( Chair: Florian Ingels )  |
+| <nobr>16:45 - 17:10</nobr> | A near-optimal time algorithm for Wheelerization problem |
+| <nobr>17:10 - 17:35</nobr> | Vizitig – Multi-sample sequencing data visualization |
+
+<br/>
+
+### Thursday, 6 March			
+
+|               |   |
+|---------------|---|
+| <nobr>  </nobr> | **Session 6: Data Structures & Optimization Techniques** ( Chair: Diego Diaz )  |
+| <nobr> 9:00 - 9:25  </nobr> | Better Cuckoo Filters |
+| <nobr> 9:25 - 9:50  </nobr> | Blocked Bloom Filters with Choices |
+| <nobr> 9:50 - 10:15 </nobr> | Faster Wavelet Tree Queries |
+| <nobr> 10:15 - 10:40</nobr> | On a novel Suffix Array compression technique based on Suffixient sets |
+| <nobr> 10:40 - 11:10</nobr> | <ins>Break</ins> |
+| <nobr>              </nobr> | **Session 7: Burrows-Wheeler Transform and Related Topics**  ( Chair: TBD )  |
+| <nobr> 11:10 - 11:35</nobr> | Computation of the XBWT-based Distance Measures for Labeled Trees |
+| <nobr> 11:35 - 12:00</nobr> | Efficient $r$-index implementation via dynamic partitioning of the BWT |
+| <nobr> 12:00 - 12:25</nobr> | Batched k-mer lookup on the Spectral Burrows-Wheeler Transform |
+| <nobr> 12:25 - 13:50</nobr> | <ins>Lunch</ins> |
+| <nobr> 13:50 - 14:00</nobr> | <ins>Presentation of DSB 2026</ins> |
+| <nobr>              </nobr> | **Session 8: Genomes Analysis** ( Chair: Giulia Bernardini )  |
+| <nobr> 14:00 - 14:25</nobr> | Practical colinear chaining on sequences revisited |
+| <nobr> 14:25 - 14:50</nobr> | Uncertainty aware haplotype based genomic variant effect prediction |
+| <nobr> 14:50 - 15:15</nobr> | Measuring Genomic Data with PFP |
+| <nobr> 15:15 - 15:40</nobr> | Optimized K-mer Matching For Million-Genome Collections On Laptops |
+| <nobr> 15:40 - 16:10</nobr> | <ins>Break</ins> |
+| <nobr>              </nobr> | **Session 9: k-mer Compression & Representation** ( Chair: Davide Cenzato )  |
+| <nobr> 16:10 - 16:35</nobr> | Hyper-k-mers: efficient streaming k-mers representation |
+| <nobr> 16:35 - 17:00</nobr> | Imbalance in minimizer-based partitions of k-mers: a theoretical approach |
+| <nobr> 17:00 - 17:25</nobr> | Kaminari: a resource-frugal index for approximate colored k-mer queries |
+| <nobr> 17:25 - 17:50</nobr> | Masked superstrings as a compact, indexable, and dynamic representation of unconstrained k-mer sets | 
+| <nobr> 17:50 - 18:00</nobr> | <ins>Closing</ins> |
+| <nobr> 20:00 - 	    </nobr>| <ins>Social dinner</ins> |
 
 ## Organizers
 
