Close registrations, update participants

--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -29,73 +29,15 @@ DSB 2025 will take place at the [Department of Computer Science](https://di.unip
 
 **Abstract submission deadline:** February 1st, 2025 AoE. Expired.
 
-**Registration deadline:** February 15th, 2025 AoE.
-[Register here](https://forms.office.com/e/3qczYFZTCh)
+**Registration deadline:** February 15th, 2025 AoE. Expired.
 
 As in previous editions, there will be no formal review process. While we aim to provide everyone with an opportunity to present, the organizers reserve the right to select talks from the submissions to ensure a diverse and engaging program.
 
-## Confirmed participants
-
-*Updated as of February 11th, 2025*
-
-- Ackermann Léo, Univ. Rennes, Inria, CNRS, IRISA
-- Alfredo Carmona Tabja Gabriel, University of Pisa
-- Ascone Rocco, University of Trieste
-- Becker Ruben, Ca' Foscari University of Venice
-- Bernardini Giulia, University of Milan
-- Biagi Elena, University of Helsinki
-- Bohnenkämper Leonard, Bielefeld University
-- Bohuslavova Dominika, Czech Technical University in Prague
-- Bonizzoni Paola, Università di Milano Bicocca
-- Böttcher Stefan, Paderborn University
-- Brunetti Francesca, Sapienza University of Rome
-- Campanelli Alessio, Ca' Foscari University of Venice
-- Carfagna Lorenzo, University of Pisa
-- Cenzato Davide, Ca' Foscari University of Venice
-- Cioni Lapo, Università degli Studi di Firenze
-- Depuydt Lore, Ghent University - imec
-- Elena Schmitz Johanna, Saarland University
-- Flege Patrick, Wageningen University & Research
-- Gao Younan, University of Milano-Bicocca
-- Gargiulo  Francesco, Università di Pisa
-- Girard Mathilde, University of Lille
-- Groot Koerkamp Ragnar, ETH Zurich
-- Grossi Roberto, Università di Pisa
-- Guerrini Veronica, University of Pisa
-- Ingels Florian, Université de Lille
-- Levallois Victor, Inria Rennes
-- Lipták Zsuzsanna, University of Verona
-- Lucà Simone, University of Verona
-- Manzini Giovanni, University of Pisa
-- Mwaniki Njagi, University of Pisa
-- Parmigiani Luca, Bielefeld University
-- Pibiri Giulio Ermanno, Ca' Foscari University of Venice
-- Pisanti Nadia, University of Pisa
-- Prezza Nicola, Ca' Foscari University of Venice
-- Punzi Giulia, University of Pisa
-- Puttini Daniel, Ca' Foscari University of Venice
-- Regnier Alix, Inria - GenScale
-- Rivals Eric,  LIRMM (CNRS) & Univ. Montpellier
-- Rizzo Nicola, University of Helsinki
-- Robidou Lucas, Bielefeld University, Germany
-- Romana Giuseppe, University of Palermo
-- Rosone Giovanna, University of Pisa - Italy
-- Rouzé Timothé, Institut Pasteur Paris
-- Savino Angelo, Università di Pisa
-- Sena Francisco, University of Helsinki
-- Stoye Jens, Bielefeld University
-- Tosoni Carlo, Ca' Foscari University
-- Venturini Rossano, University of Pisa
-- Vinciguerra Giorgio, University of Pisa
-- Wiegand Felix, Bioinformatics and Computational Oncology (Kösterlab), University Duisburg-Essen
-- Zentgraf Jens, Saarland University
-
 ## Program
 
-<style>table { border-spacing: 10px; }</style>
+<style>table { border-spacing: 10px; }</style> <br/>
 
-<br/>
-### Wednesday, 5 March			
+**Wednesday, 5 March**		
 
 |               |   |
 |---------------|---|
@@ -128,7 +70,7 @@ As in previous editions, there will be no formal review process. While we aim to
 
 <br/>
 
-### Thursday, 6 March			
+**Thursday, 6 March**
 
 |               |   |
 |---------------|---|
@@ -157,6 +99,74 @@ As in previous editions, there will be no formal review process. While we aim to
 | <nobr> 17:25 - 17:50</nobr> | Ondřej Sladký, Pavel Veselý, *Karel Břinda*. *Masked superstrings as a compact, indexable, and dynamic representation of unconstrained k-mer sets* | 
 | <nobr> 17:50 - 18:00</nobr> | <ins>Closing</ins> |
 | <nobr> 20:00 - 	    </nobr>| <ins>Social dinner</ins> |
+
+
+## Confirmed participants
+
+- Ackermann Léo, Univ. Rennes, Inria, CNRS, IRISA
+- Alfredo Carmona Tabja Gabriel, University of Pisa
+- Ascone Rocco, University of Trieste
+- Becker Ruben, Ca' Foscari University of Venice
+- Bernardini Giulia, University of Milan
+- Biagi Elena, University of Helsinki
+- Bohnenkämper Leonard, Bielefeld University
+- Bohuslavova Dominika, Czech Technical University in Prague
+- Bonizzoni Paola, Università di Milano Bicocca
+- Böttcher Stefan, Paderborn University
+- Brinda Karel, Inria Rennes, France
+- Brunetti Francesca, Sapienza University of Rome
+- Campanelli Alessio, Ca' Foscari University of Venice
+- Carfagna Lorenzo, University of Pisa
+- Cenzato Davide, Ca' Foscari University of Venice
+- Cioni Lapo, Università degli Studi di Firenze
+- Cozzi Davide, University of Milano-Bicocca
+- Degardins Bastien, CRIStAL, Bonsaï Team - University of Lille
+- Depuydt Lore, Ghent University - imec
+- Diaz Diego, University of Helsinki
+- Elena Schmitz Johanna, Saarland University
+- Faure Roland, Institut Pasteur (Paris)
+- Flege Patrick, Wageningen University & Research
+- Gabory Estéban, University of Palermo
+- Gao Younan, University of Milano-Bicocca
+- Gargiulo Francesco, Università di Pisa
+- Girard Mathilde, University of Lille
+- Groot Koerkamp Ragnar, ETH Zurich
+- Grossi Roberto, Università di Pisa
+- Guerrini Veronica, University of Pisa
+- Heringer Peter, German Diabetes Center (DDZ)
+- Ingels Florian, Université de Lille
+- Kim Sung-Hwan, Ca' Foscari University of Venice
+- Lari Filippo, Università di Pisa
+- Levallois Victor, Inria Rennes
+- Lipták Zsuzsanna, University of Verona
+- Lucà Simone, University of Verona
+- Manzini Giovanni, University of Pisa
+- Martinello Pierfrancesco, Università degli Studi di Palermo
+- Mbianda Turenne Bagoup, Fondation Hope For Humanity
+- Mwaniki Njagi, University of Pisa
+- Parmigiani Luca, Bielefeld University
+- Pibiri Giulio Ermanno, Ca' Foscari University of Venice
+- Pisanti Nadia, University of Pisa
+- Prezza Nicola, Ca' Foscari University of Venice
+- Punzi Giulia, University of Pisa
+- Puttini Daniel, Ca' Foscari University of Venice
+- Regnier Alix, Inria - GenScale
+- Rivals Eric,  LIRMM (CNRS) & Univ. Montpellier
+- Rizzo Nicola, University of Helsinki
+- Robidou Lucas, Bielefeld University, Germany
+- Romana Giuseppe, University of Palermo
+- Rosone Giovanna, University of Pisa - Italy
+- Rouzé Timothé, Institut Pasteur Paris
+- Savino Angelo, Università di Pisa
+- Sciortino Marinella, University of Palermo
+- Sena Francisco, University of Helsinki
+- Stoye Jens, Bielefeld University
+- Tosoni Carlo, Ca' Foscari University
+- Venturini Rossano, University of Pisa
+- Vinciguerra Giorgio, University of Pisa
+- Wiegand Felix, Bioinformatics and Computational Oncology (Kösterlab), University Duisburg-Essen
+- Zentgraf Jens, Saarland University
+
 
 ## Organizers
 
