Update session chairs

--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -43,7 +43,7 @@ As in previous editions, there will be no formal review process. While we aim to
 |---------------|---|
 | <nobr>8:30 - 8:40  </nobr> | <ins>Registration</ins> |
 | <nobr>8:40 - 8:45  </nobr> | <ins>Opening</ins> |
-| <nobr>             </nobr> | **Session 1: Sampling, sketching and compression** ( Chair: Veronica Guerrini ) |
+| <nobr>             </nobr> | **Session 1: Sampling, sketching and compression** ( Chair: Nadia Pisanti ) |
 | <nobr>8:45 - 9:10  </nobr> | *Roland Faure*, Jean-François Flot, Dominique Lavenier. *A new sketching method for accurate long reads: a genome assembly example* |
 | <nobr>9:10 - 9:35  </nobr> | *Groot Koerkamp Ragnar*. *Practical and optimal sampling schemes* |
 | <nobr>9:35 - 10:00 </nobr> | *Lore Depuydt*, Omar Ahmed, Jan Fostier, Ben Langmead, Travis Gagie. *Run-length compressed metagenomic read classification with SMEM-finding and tagging* |
@@ -80,7 +80,7 @@ As in previous editions, there will be no formal review process. While we aim to
 | <nobr> 9:50 - 10:15 </nobr> | *Angelo Savino*, Rossano Venturini, Florian Kurpicz. *Faster Wavelet Tree Queries* |
 | <nobr> 10:15 - 10:40</nobr> | *Davide Cenzato*, Lore Depuydt, Travis Gagie, Sung-Hwan Kim, Giovanni Manzini, Francisco Olivares, Nicola Prezza. *On a novel Suffix Array compression technique based on Suffixient sets* |
 | <nobr> 10:40 - 11:10</nobr> | <ins>Break</ins> |
-| <nobr>              </nobr> | **Session 7: Burrows-Wheeler Transform and Related Topics**  ( Chair: TBD )  |
+| <nobr>              </nobr> | **Session 7: Burrows-Wheeler Transform and Related Topics**  ( Chair: Veronica Guerrini )  |
 | <nobr> 11:10 - 11:35</nobr> | Sabrina Mantaci, *Pierfrancesco Martinello*, Giuseppe Romana, Giovanna Rosone, Marinella Sciortino. *Computation of the XBWT-based Distance Measures for Labeled Trees* |
 | <nobr> 11:35 - 12:00</nobr> | *Diego Diaz*. *Efficient $r$-index implementation via dynamic partitioning of the BWT* |
 | <nobr> 12:00 - 12:25</nobr> | Jarno N. Alanko, *Elena Biagi*, Joel Mackenzie, Simon J. Puglisi. *Batched k-mer lookup on the Spectral Burrows-Wheeler Transform* |
