--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -23,7 +23,7 @@ image: "pisa_aerial.jpg"
 
 DSB 2025 will take place at the [Department of Computer Science](https://di.unipi.it/en/), [University of Pisa](https://www.unipi.it/index.php/english), Italy on **March 5-6, 2025**.
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2883.5263153872324!2d10.40570357654915!3d43.72039217109893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d591bcbfe591bb%3A0x91d311f58e2115b6!2sDipartimento%20di%20Informatica!5e0!3m2!1sit!2sit!4v1732374209673!5m2!1sit!2sit" width="750" height="400" style="border:0;margin-bottom:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2883.5263153872324!2d10.40570357654915!3d43.72039217109893!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d591bcbfe591bb%3A0x91d311f58e2115b6!2sDipartimento%20di%20Informatica!5e0!3m2!1sit!2sit!4v1732374209673!5m2!1sit!2sit" width="100%" height="400" style="border:0;margin-bottom:20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 ## How to participate
 
@@ -98,7 +98,7 @@ As in previous editions, there will be no formal review process. While we aim to
 | <nobr> 17:00 - 17:25</nobr> | *Victor Levallois*, Yoshihiro Shibuya, Pierre Peterlongo, Giulio Ermanno Pibiri. *Kaminari: a resource-frugal index for approximate colored k-mer queries* |
 | <nobr> 17:25 - 17:50</nobr> | Ondřej Sladký, Pavel Veselý, *Karel Břinda*. *Masked superstrings as a compact, indexable, and dynamic representation of unconstrained k-mer sets* | 
 | <nobr> 17:50 - 18:00</nobr> | <ins>Closing</ins> |
-| <nobr> 20:00 - 	    </nobr>| <ins>Social dinner</ins> |
+| <nobr> 20:00 - 	    </nobr>| <ins>Social dinner</ins> at *Alla maniera di Grace*, [Vicolo del Poschi 7, Pisa](https://maps.app.goo.gl/f3hAqCNMwDJRj7NX9) |
 
 
 ## Confirmed participants
