--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -80,13 +80,13 @@ As in previous editions, there will be no formal review process. While we aim to
 | <nobr> 9:50 - 10:15 </nobr> | *Angelo Savino*, Rossano Venturini, Florian Kurpicz. *Faster Wavelet Tree Queries* |
 | <nobr> 10:15 - 10:40</nobr> | *Davide Cenzato*, Lore Depuydt, Travis Gagie, Sung-Hwan Kim, Giovanni Manzini, Francisco Olivares, Nicola Prezza. *On a novel Suffix Array compression technique based on Suffixient sets* |
 | <nobr> 10:40 - 11:10</nobr> | <ins>Break</ins> |
-| <nobr>              </nobr> | **Session 7: Burrows-Wheeler Transform and Related Topics**  ( Chair: Veronica Guerrini )  |
+| <nobr>              </nobr> | **Session 7: Burrows-Wheeler Transform and Related Topics**  ( Chair: Giulia Bernardini )  |
 | <nobr> 11:10 - 11:35</nobr> | Sabrina Mantaci, *Pierfrancesco Martinello*, Giuseppe Romana, Giovanna Rosone, Marinella Sciortino. *Computation of the XBWT-based Distance Measures for Labeled Trees* |
 | <nobr> 11:35 - 12:00</nobr> | *Diego Diaz*. *Efficient $r$-index implementation via dynamic partitioning of the BWT* |
 | <nobr> 12:00 - 12:25</nobr> | Jarno N. Alanko, *Elena Biagi*, Joel Mackenzie, Simon J. Puglisi. *Batched k-mer lookup on the Spectral Burrows-Wheeler Transform* |
 | <nobr> 12:25 - 13:50</nobr> | <ins>Lunch</ins> |
 | <nobr> 13:50 - 14:00</nobr> | <ins>Presentation of DSB 2026</ins> |
-| <nobr>              </nobr> | *Session 8: Genomes Analysis* ( Chair: Giulia Bernardini )  |
+| <nobr>              </nobr> | *Session 8: Genomes Analysis* ( Chair: Veronica Guerrini )  |
 | <nobr> 14:00 - 14:25</nobr> | *Nicola Rizzo*. *Practical colinear chaining on sequences revisited* |
 | <nobr> 14:25 - 14:50</nobr> | *Felix Wiegand*, Johannes Köster. *Uncertainty aware haplotype based genomic variant effect prediction* |
 | <nobr> 14:50 - 15:15</nobr> | *Simone Lucà*, Zsuzsanna Lipták, Francesco Masillo. *Measuring Genomic Data with PFP* |
