Fix bold in session title

--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -86,7 +86,7 @@ As in previous editions, there will be no formal review process. While we aim to
 | <nobr> 12:00 - 12:25</nobr> | Jarno N. Alanko, *Elena Biagi*, Joel Mackenzie, Simon J. Puglisi. *Batched k-mer lookup on the Spectral Burrows-Wheeler Transform* |
 | <nobr> 12:25 - 13:50</nobr> | <ins>Lunch</ins> |
 | <nobr> 13:50 - 14:00</nobr> | <ins>Presentation of DSB 2026</ins> |
-| <nobr>              </nobr> | *Session 8: Genomes Analysis* ( Chair: Veronica Guerrini )  |
+| <nobr>              </nobr> | **Session 8: Genomes Analysis** ( Chair: Veronica Guerrini )  |
 | <nobr> 14:00 - 14:25</nobr> | *Nicola Rizzo*. *Practical colinear chaining on sequences revisited* |
 | <nobr> 14:25 - 14:50</nobr> | *Felix Wiegand*, Johannes Köster. *Uncertainty aware haplotype based genomic variant effect prediction* |
 | <nobr> 14:50 - 15:15</nobr> | *Simone Lucà*, Zsuzsanna Lipták, Francesco Masillo. *Measuring Genomic Data with PFP* |
