--- a/DSB2025/DSB2025.md
+++ b/DSB2025/DSB2025.md
@@ -86,13 +86,13 @@ As in previous editions, there will be no formal review process. While we aim to
 | <nobr> 12:00 - 12:25</nobr> | Jarno N. Alanko, *Elena Biagi*, Joel Mackenzie, Simon J. Puglisi. *Batched k-mer lookup on the Spectral Burrows-Wheeler Transform* |
 | <nobr> 12:25 - 13:50</nobr> | <ins>Lunch</ins> |
 | <nobr> 13:50 - 14:00</nobr> | <ins>Presentation of DSB 2026</ins> |
-| <nobr>              </nobr> | **Session 8: Genomes Analysis** ( Chair: Veronica Guerrini )  |
+| <nobr>              </nobr> | **Session 8: Genomes Analysis** ( Chair: Davide Cenzato )  |
 | <nobr> 14:00 - 14:25</nobr> | *Nicola Rizzo*. *Practical colinear chaining on sequences revisited* |
 | <nobr> 14:25 - 14:50</nobr> | *Felix Wiegand*, Johannes Köster. *Uncertainty aware haplotype based genomic variant effect prediction* |
 | <nobr> 14:50 - 15:15</nobr> | *Simone Lucà*, Zsuzsanna Lipták, Francesco Masillo. *Measuring Genomic Data with PFP* |
 | <nobr> 15:15 - 15:40</nobr> | *Francesca Brunetti*, Karel Břinda. *Optimized K-mer Matching For Million-Genome Collections On Laptops* |
 | <nobr> 15:40 - 16:10</nobr> | <ins>Break</ins> |
-| <nobr>              </nobr> | **Session 9: k-mer Compression & Representation** ( Chair: Davide Cenzato )  |
+| <nobr>              </nobr> | **Session 9: k-mer Compression & Representation** ( Chair: Veronica Guerrini )  |
 | <nobr> 16:10 - 16:35</nobr> | Igor Martayan, *Lucas Robidou*, Yoshihiro Shibuya, Antoine Limasset. *Hyper-k-mers: efficient streaming k-mers representation* |
 | <nobr> 16:35 - 17:00</nobr> | *Florian Ingels*, Camille Marchet, Mikaël Salson. *Imbalance in minimizer-based partitions of k-mers: a theoretical approach* |
 | <nobr> 17:00 - 17:25</nobr> | *Victor Levallois*, Yoshihiro Shibuya, Pierre Peterlongo, Giulio Ermanno Pibiri. *Kaminari: a resource-frugal index for approximate colored k-mer queries* |
