update affiliation, contact email and sponsor

--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -45,15 +45,15 @@ As in previous editions, there will be no formal review process. While we aim to
 - Davide Cenzato, Ca' Foscari University of Venice
 - Davide Tonetto, Ca' Foscari University of Venice
 - Riccardo Maso, Ca' Foscari University of Venice
-- Sung-Hwan Kim, Sant’Anna School of Advanced Studies
+- Sung-Hwan Kim, Ca' Foscari University of Venice
 
-For any questions about DSB 2026, please reach out to [nicola.prezza@unive.it](mailto:nicola.prezza@unive.it).
+For any questions about DSB 2026, please reach out to [dsb26-organization-grpunive@unive.it](mailto:dsb26-organization-grpunive@unive.it).
 
 ## Sponsors
 
 Lots of thanks for the financial support of:
 
-- [Department of Environmental Sciences, Informatics and Statistics, Ca' Foscari University of Venice](https://www.unive.it/pag/28183)
+- [Ca' Foscari University of Venice](https://www.unive.it/web/en/497/home)
 - [REGINDEX: Compressed Indexes for Regular Languages with Applications to Computational Pan-genomics.](https://pinc-miur.disco.unimib.it/)
 
 <small>Funded by ERC StG “REGINDEX: Compressed indexes for regular languages with applications to computational pan-genomics” grant nr 101039208. Views and opinions expressed are however those of the author(s) only and do not necessarily reflect those of the European Union or the European Research Council Executive Agency. Neither the European Union nor the granting authority can be held responsible for them.</small> 
