sponsor fix and navigation.yml

--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -54,7 +54,7 @@ For any questions about DSB 2026, please reach out to [dsb26-organization-grpuni
 Lots of thanks for the financial support of:
 
 - [Ca' Foscari University of Venice](https://www.unive.it/web/en/497/home)
-- [REGINDEX: Compressed Indexes for Regular Languages with Applications to Computational Pan-genomics.](https://pinc-miur.disco.unimib.it/)
+- [REGINDEX: Compressed Indexes for Regular Languages with Applications to Computational Pan-genomics.](https://pric.unive.it/projects/regindex/home)
 
 <small>Funded by ERC StG “REGINDEX: Compressed indexes for regular languages with applications to computational pan-genomics” grant nr 101039208. Views and opinions expressed are however those of the author(s) only and do not necessarily reflect those of the European Union or the European Research Council Executive Agency. Neither the European Union nor the granting authority can be held responsible for them.</small> 
 
