--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -49,6 +49,7 @@ For this edition, there will be no registration fee.
 - Carlo Tosoni, Ca' Foscari University of Venice
 - Daniel Puttini, Ca' Foscari University of Venice
 - Davide Cenzato, Ca' Foscari University of Venice
+- Davide Cologni, Ca' Foscari University of Venice
 - Davide Tonetto, Ca' Foscari University of Venice
 - Riccardo Maso, Ca' Foscari University of Venice
 - Sung-Hwan Kim, Ca' Foscari University of Venice
