Sung-Hwan affiliation change

--- a/DSB2026/DSB2026.md
+++ b/DSB2026/DSB2026.md
@@ -52,7 +52,7 @@ For this edition, there will be no registration fee.
 - Davide Cologni, Ca' Foscari University of Venice
 - Davide Tonetto, Ca' Foscari University of Venice
 - Riccardo Maso, Ca' Foscari University of Venice
-- Sung-Hwan Kim, Ca' Foscari University of Venice
+- Sung-Hwan Kim, Sant'Anna School of Advanced Studies
 
 For any questions about DSB 2026, please reach out to [dsb26-organization-grpunive@unive.it](mailto:dsb26-organization-grpunive@unive.it).
 
